compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__hint_for_method_call.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1768
expression: "\npub type User {\n  User(id: Int, name: String)\n}\n\npub fn main(user: User) {\n  user.login()\n}\n"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:7:3
  │
7 │   user.login()
  │   ^^^^^^^^^^ Did you mean `id`?

The value being accessed has this type:

    User

It has these fields:

    .id
    .name

Gleam is not object oriented, so if you are trying to call a method on this
value you may want to use the function syntax instead.

    login(value)

